Fix command-bar in dark mode

--- a/src/core/command-bar/command-bar.module.scss
+++ b/src/core/command-bar/command-bar.module.scss
@@ -77,13 +77,13 @@
   --bs-btn-bg: var(--bs-body-bg);
   --bs-btn-border-color: transparent;
   --bs-btn-hover-color: var(--bs-body-color);
-  --bs-btn-hover-bg: rgba(0, 0, 0, 0.05);
+  --bs-btn-hover-bg: var(--bs-tertiary-bg);
   --bs-btn-hover-border-color: transparent;
   --bs-btn-active-color: var(--bs-body-color);
-  --bs-btn-active-bg: rgba(0, 0, 0, 0.075);
+  --bs-btn-active-bg: rgba(0, 0, 0, 0.05);
   --bs-btn-active-border-color: transparent;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.1);
-  --bs-btn-disabled-color: rgba(0, 0, 0, 0.5);
+  --bs-btn-disabled-color: var(--bs-tertiary-color);
   --bs-btn-disabled-bg: var(--bs-body-bg);
   --bs-btn-disabled-border-color: transparent;
 }
